--- a/index.html
+++ b/index.html
@@ -1,73 +1,136 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ChangeWear</title>
+
+<!--Metadatos-->
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>ChangeWear</title>
+    <meta name="description" content="Sitio de venta online (Beta)">
+    <link rel="icon" href="img/cwIcon.png" type="image/png">
+    <!-- FontAwesome -->
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-    <link rel="shortcut icon" href="img/cwIcon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/estilos.css" />
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    >
+    <!-- Bootstrap -->
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+        crossorigin="anonymous"
+    >
+    <link rel="stylesheet" href="css/estilos.css">
+    <!-- Javascript -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
-  </head>
+</head>
+
+<!--Inicio de la página-->
   <body>
-    <header class="main-header">
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+            <!-- Toggler del navbar -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerMain" aria-controls="navbarTogglerMain" aria-expanded="false" aria-label="Navegación">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Marca de la página -->
+            <a class="navbar-brand ml-2 ml-md-0 mr-auto mr-md-2" href="#">ChangeWear</a>
+            <!-- Los items del Navbar -->
+            <div class="collapse navbar-collapse" id="navbarTogglerMain">
+                <ul class="navbar-nav mr-auto mt-1 mt-md-0">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Inicio<span class="sr-only">(actual)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Mujeres</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Hombres</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Niños</a>
+                  </li>
+                  <!-- Botón del carro de compras 1 -->
+                  <li class="nav-item dropdown d-md-none">
+                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Carro de compra <i class="fas fa-shopping-cart"></i>
+                      </a>
+                      <div class="dropdown-menu dropdown-menu-right">
+                          <a class="dropdown-item" href="#">Item 1</a>
+                          <a class="dropdown-item" href="#">Item 2</a>
+                          <a class="dropdown-item" href="#">Item 3</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Ver carro</a>
+                      </div>
+                  </li>
+                </ul>
+                <form class="form-inline my-0 mr-0 nav-item">
+                    <input class="form-control mr-0 text_area" type="search" placeholder="Buscar"  aria-label="Buscar">
+                    <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i class="fas fa-search"></i></button>
+                </form>
+                <!-- Botón del carro de compras 2-->
+                <div class="btn-group dropdown ml-2 d-none d-md-block">
+                    <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="#">Item 1</a>
+                        <a class="dropdown-item" href="#">Item 2</a>
+                        <a class="dropdown-item" href="#">Item 3</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Ver carro</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
+
+
+<!--
+    <div class="main-header">
       <div class="container container-flex">
         <div class="main-header_container">
-          <h1 class="main-header_title">ChangeWear</h1>
-          <span class="icon menu fas fa-bars" id="btn menu"></span>
-          <nav class="main-nav" id="main-nav">
-            <ul class="menu">
-              <li class="menu_item">
-                <a href="Inicio" class="menu_link">Inicio</a>
-              </li>
-              <li class="menu_item">
-                <a href="Marcas" class="menu_link">Marcas</a>
-              </li>
-              <li class="menu_item">
-                <a href="Hombre" class="menu_link">Hombre</a>
-              </li>
-              <li class="menu_item">
-                <a href="Mujer" class="menu_link">Mujer</a>
-              </li>
-              <li class="menu_item">
-                <a href="Niños" class="menu_link">Niños</a>
-              </li>
-              <li class="menu_item">
-                <a href="Zapatillas" class="menu_link">Zapatillas</a>
-              </li>
-              <li class="menu_item">
-                <a href="Ropa" class="menu_link">Ropa</a>
-              </li>
-              <li class="menu_item">
-                <a href="Accesorios" class="menu_link">Accesorios</a>
-              </li>
-            </ul>
-          </nav>
+            <h1 class="main-header_title">ChangeWear</h1>
+            <span class="icon menu fas fa-bars" id="btn menu"></span>
+            <nav class="av" id="main-nav">
+                <ul class="menu">
+                    <li class="menu_item">
+                        <a href="Inicio" class="menu_link">Inicio</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="Marcas" class="menu_link">Marcas</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="Hombre" class="menu_link">Hombre</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="Mujer" class="menu_link">Mujer</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="Niños" class="menu_link">Niños</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="Zapatillas" class="menu_link">Zapatillas</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="Ropa" class="menu_link">Ropa</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="Accesorios" class="menu_link">Accesorios</a>
+                    </li>
+                </ul>
+            </nav> 
         </div>
-        <div class="main-header_container">
-          <p class="main-header_txt">Síguenos @changewearcl</p>
-          <p class="main-header_txt"><i class="fas fa-phone"></i> +56912345678</p>
-        </div>
-        <div class="main-header_container">
-          <!-- usuario -->
-          <i class="far fa-user"></i>
-          <!-- ayuda -->
-          <i class="far fa-question-circle"></i>
-          <!-- carrito de compras -->
           <a href=""class="main-header_btn">Mi carrito<i class="fas fa-shopping-cart"></i></a>
           <input type="search"class="main-header_input" placeholder="QUÉ BUSCAS" /><i class="fas fa-search"></i>
-          <!-- email -->
-          <i class="fas fa-envelope"></i>
-        </div>
+    </div>
+-->
+<!-- Aquí va el contenido -->
+    <div class='main-body'>
         <div class="slideshow">
             <ul class="slider">
                 <li>
@@ -103,9 +166,25 @@
             </div>
         </div>
       </div>
-    </header>
+    </div>
+
+<!-- Aquí va el footer -->
+    <footer>
+        <div class="main-header_container">
+             <p class="main-header_txt">Síguenos @changewearcl</p>
+             <p class="main-header_txt"><i class="fas fa-phone"></i> +56912345678</p>
+        </div>
+        <div class="main-header_container">
+            <!-- usuario -->
+            <i class="far fa-user"></i>
+            <!-- ayuda -->
+            <i class="far fa-question-circle"></i>    
+            <!-- email -->
+            <i class="fas fa-envelope"></i>
+        </div>
+        
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
   </body>
 </html>
