--- a/registroUsuario.html
+++ b/registroUsuario.html
@@ -1,137 +1,239 @@
 <!DOCTYPE html>
 <html lang="es">
-    
+
 <!--Metadatos-->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Registrar Usuario - ChangeWear</title>
-    <meta name="description" content="Sitio de venta online (Beta)">
-    <link rel="icon" href="img/cwIcon.png" type="image/png">
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos.css">
-    <!-- Javascript -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/main.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Registrar Usuario - ChangeWear</title>
+  <meta name="description" content="Sitio de venta online (Beta)">
+  <link rel="icon" href="img/cwIcon.png" type="image/png">
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos.css">
+  <!-- Javascript -->
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-            <!-- Toggler del navbar -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerMain"
-                aria-controls="navbarTogglerMain" aria-expanded="false" aria-label="Navegación">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-md-0 mr-auto mr-md-2" href="#">ChangeWear</a>
-            <!-- Los items del Navbar -->
-            <div class="collapse navbar-collapse" id="navbarTogglerMain">
-                <ul class="navbar-nav mr-auto mt-1 mt-md-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Inicio<span class="sr-only">(actual)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Mujeres</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Hombres</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Niños</a>
-                    </li>
-                    <!-- Botón del carro de compras 1 -->
-                    <li class="nav-item dropdown d-md-none">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            Carro de compra <i class="fas fa-shopping-cart"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Item 1</a>
-                            <a class="dropdown-item" href="#">Item 2</a>
-                            <a class="dropdown-item" href="#">Item 3</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Ver carro</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="form-inline my-0 mr-0 nav-item">
-                    <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar">
-                    <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i
-                            class="fas fa-search"></i></button>
-                </form>
-                <!-- Botón del carro de compras 2-->
-                <div class="btn-group dropdown ml-2 d-none d-md-block">
-                    <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        <i class="fas fa-shopping-cart"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Item 1</a>
-                        <a class="dropdown-item" href="#">Item 2</a>
-                        <a class="dropdown-item" href="#">Item 3</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Ver carro</a>
-                    </div>
-                </div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+      <!-- Toggler del navbar -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerMain"
+        aria-controls="navbarTogglerMain" aria-expanded="false" aria-label="Navegación">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Marca de la página -->
+      <a class="navbar-brand ml-2 ml-md-0 mr-auto mr-md-2" href="#">ChangeWear</a>
+      <!-- Los items del Navbar -->
+      <div class="collapse navbar-collapse" id="navbarTogglerMain">
+        <ul class="navbar-nav mr-auto mt-1 mt-md-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Inicio<span class="sr-only">(actual)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Mujeres</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Hombres</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Niños</a>
+          </li>
+          <!-- Botón del carro de compras 1 -->
+          <li class="nav-item dropdown d-md-none">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Carro de compra <i class="fas fa-shopping-cart"></i>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right">
+              <a class="dropdown-item" href="#">Item 1</a>
+              <a class="dropdown-item" href="#">Item 2</a>
+              <a class="dropdown-item" href="#">Item 3</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Ver carro</a>
             </div>
-        </nav>
-    </header>
-
-    <div>
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Direccion Electronica</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+          </li>
+        </ul>
+        <form class="form-inline my-0 mr-0 nav-item">
+          <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar">
+          <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i class="fas fa-search"></i></button>
         </form>
+        <!-- Botón del carro de compras 2-->
+        <div class="btn-group dropdown ml-2 d-none d-md-block">
+          <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right">
+            <a class="dropdown-item" href="#">Item 1</a>
+            <a class="dropdown-item" href="#">Item 2</a>
+            <a class="dropdown-item" href="#">Item 3</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Ver carro</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <br>
+  <div class="container register">
+    <div class="row">
+      <div class="col-md-9 register-right">
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <h3 class="register-heading">Registrar Usuario</h3>
+            <div class="row register-form">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Nombre *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Apellido *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Contraseña *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Confirmar Contraseña *" value="" />
+                </div>
+                <div class="form-group">
+                  <div class="maxl">
+                    <label class="radio inline">
+                      <input type="radio" name="genero" value="hombre" checked>
+                      <span>Hombre </span>
+                    </label>
+                    <label class="radio inline">
+                      <input type="radio" name="genero" value="mujer">
+                      <span>Mujer </span>
+                    </label>
+                    <label class="radio inline">
+                      <input type="radio" name="genero" value="otro">
+                      <span>Otro </span>
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Correo Electronico *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control"
+                    placeholder="Telefono *" value="" />
+                </div>
+                <div class="form-group">
+                  <select class="form-control">
+                    <option class="hidden" selected disabled>Seleccione su Region</option>
+                    <option>Arica y Parinacota</option>
+                    <option>Tarapacá</option>
+                    <option>Antofagasta</option>
+                    <option>Atacama</option>
+                    <option>Coquimbo</option>
+                    <option>Valparaíso</option>
+                    <option>Metropolitana de Santiago</option>
+                    <option>Libertador General Bernardo O’Higgins</option>
+                    <option>Maule</option>
+                    <option>Ñuble</option>
+                    <option>Biobío</option>
+                    <option>La Araucanía</option>
+                    <option>Los Ríos</option>
+                    <option>Los Lagos</option>
+                    <option>Aysén del General Carlos Ibáñez del Campo</option>
+                    <option>Magallanes y la Antártica Chilena</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Direccion *" value="" />
+                </div>
+                <input type="submit" class="btnRegister" value="Confirmar" />
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <h3 class="register-heading">Apply as a Hirer</h3>
+            <div class="row register-form">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="First Name *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="text" maxlength="10" minlength="10" class="form-control" placeholder="Phone *"
+                    value="" />
+                </div>
+
+
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Password *" value="" />
+                </div>
+                <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
+                </div>
+                <div class="form-group">
+                  <select class="form-control">
+                    <option class="hidden" selected disabled>Please select your Sequrity Question</option>
+                    <option>What is your Birthdate?</option>
+                    <option>What is Your old Phone Number</option>
+                    <option>What is your Pet Name?</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="`Answer *" value="" />
+                </div>
+                <input type="submit" class="btnRegister" value="Register" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container d-flex justify-content-between">
-            <p class="main-header_txt">Síguenos @changewearcl</p>
-            <p class="main-header_txt"><i class="fas fa-phone"></i> +56912345678</p>
-        </div>
-        <div class="container d-flex justify-content-between">
-            <!-- usuario -->
-            <i class="far fa-user"></i>
-            <!-- ayuda -->
-            <i class="far fa-question-circle"></i>
-            <!-- email -->
-            <i class="fas fa-envelope"></i>
-        </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-            crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-            crossorigin="anonymous"></script>
+  </div>
+  <br>
+  <br>
+  <!-- Footer -->
+  <footer>
+    <div class="container d-flex justify-content-between">
+      <p class="main-header_txt">Síguenos @changewearcl</p>
+      <p class="main-header_txt"><i class="fas fa-phone"></i> +56912345678</p>
+    </div>
+    <div class="container d-flex justify-content-between">
+      <!-- usuario -->
+      <i class="far fa-user"></i>
+      <!-- ayuda -->
+      <i class="far fa-question-circle"></i>
+      <!-- email -->
+      <i class="fas fa-envelope"></i>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"></script>
 
-    </footer>
+  </footer>
 </body>
+
 </html>
