--- a/index.html
+++ b/index.html
@@ -23,22 +23,21 @@
 </head>
 
 <!--Inicio de la página-->
-
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <!-- Toggler del navbar -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerMain"
                 aria-controls="navbarTogglerMain" aria-expanded="false" aria-label="Navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-md-0 mr-auto mr-md-2" href="#">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
-                <ul class="navbar-nav mr-auto mt-1 mt-md-0">
+                <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Inicio<span class="sr-only">(actual)</span></a>
+                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
@@ -49,11 +48,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Niños</a>
                     </li>
+                    <!-- Botón del usuario 1 -->
+                    <li class="nav-item d-lg-none">
+                        <a class="nav-link" href="registroUsuario.html">
+                            <i class="fas fa-user"></i> Usuario
+                        </a>
+                    </li>
                     <!-- Botón del carro de compras 1 -->
-                    <li class="nav-item dropdown d-md-none">
+                    <li class="nav-item dropdown d-lg-none">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
-                            Carro de compra <i class="fas fa-shopping-cart"></i>
+                            <i class="fas fa-shopping-cart"></i> Carro de compra
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
                             <a class="dropdown-item" href="#">Item 1</a>
@@ -69,8 +74,14 @@
                     <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i
                             class="fas fa-search"></i></button>
                 </form>
+                <!-- Botón de Usuario -->
+                <div class="btn-group dropdown ml-2 d-none d-lg-block">
+                    <a class="btn btn-info" href="registroUsuario.html">
+                        <i class="fas fa-user"></i>
+                    </a>
+                </div>
                 <!-- Botón del carro de compras 2-->
-                <div class="btn-group dropdown ml-2 d-none d-md-block">
+                <div class="btn-group dropdown ml-2 d-none d-lg-block">
                     <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <i class="fas fa-shopping-cart"></i>
@@ -299,30 +310,44 @@
     </main>
 
     <!-- Aquí va el footer -->
-    <footer>
-        <div class="container mt-2">
-            <div class="container d-flex justify-content-between">
-                <p class="main-header_txt">Síguenos @changewearcl</p>
-                <p class="main-header_txt"><i class="fas fa-phone"></i> +56912345678</p>
+    <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md">
+                    <h3 class="text-uppercase">Logo</h3>
+                    <p>Logo de la compañía</p>
+                </div>
+                <div class="col-md">
+                    <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+                    <ul class="mb-0 pb-2">
+                        <li>Nuestra Visión</li>
+                        <li>Noticias</li>
+                        <li>Empleo</li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+                    <ul class="mb-0 pb-2">
+                        <li>Pedidos</li>
+                        <li>Cambios y Devoluciones</li>
+                        <li>Formas de Pago</li>
+                        <li>Comunícate con Nosotros</li>
+                    </ul>
+                </div>
             </div>
-            <div class="container d-flex justify-content-between">
-                <!-- usuario -->
-                <i class="far fa-user"></i>
-                <!-- ayuda -->
-                <i class="far fa-question-circle"></i>
-                <!-- email -->
-                <i class="fas fa-envelope"></i>
+            <hr class="footer-hr my-2 py-0"/>
+            <div class="row">
+                <div class="col-4 text-left">
+                    <i class="fab fa-twitter mx-1 text-info"></i>
+                    <i class="fab fa-facebook-f mx-1 text-info"></i>
+                    <i class="fab fa-instagram mx-1 text-info"></i>
+                </div>
+                <div class="col-8 text-right copyright">
+                    Todos los derechos reservados.
+                </div>
             </div>
-        </div>
-
-
+          </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
