Agregar pagina Ninos y hombre

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hombres</a>
+                        <a class="nav-link" href="hombre.html">Hombres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Niños</a>
+                        <a class="nav-link" href="ninos.html">Niños</a>
                     </li>
                     <!-- Botón del usuario 1 -->
                     <li class="nav-item d-lg-none">
@@ -152,9 +152,11 @@
                         <div class="card bg-dark text-white catalogo" >
                             <img src="img/hombre.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <h1 class="card-text">
-                                    Hombre
-                                </h1>
+                                <a href="hombre.html" class="linkCatalogo stretched-link">
+                                    <h1 class="card-text ">
+                                        Hombre
+                                    </h1>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -174,7 +176,7 @@
                         <div class="card bg-dark text-white catalogo" >
                             <img src="img/ninos.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <a href="" class="linkCatalogo stretched-link">
+                                <a href="ninos.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text ">
                                         Niños
                                     </h1>
