--- a/hombre.html
+++ b/hombre.html
@@ -101,7 +101,7 @@
         <section class="pt-5 pb-5">
             <!-- PlaceHolder Productos -->
             <div class="container">
-                <h2 class="display-4 my-4">Mujeres</h2>
+                <h2 class="display-4 my-4">Hombre</h2>
                 <div class="row d-flex equal">
                     <div class="  col-md-4 mb-4">
                         <div class="card h-100 border-0">
