--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <a class="dropdown-item" href="#">Item 2</a>
                             <a class="dropdown-item" href="#">Item 3</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Ver carro</a>
+                            <a class="dropdown-item" href="carro.html">Ver carro</a>
                         </div>
                     </li>
                 </ul>
