Agregar carpeta paginas

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                         <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mujeres.html">Mujeres</a>
+                        <a class="nav-link" href="pages/mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="hombre.html">Hombres</a>
+                        <a class="nav-link" href="pages/hombre.html">Hombres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ninos.html">Niños</a>
+                        <a class="nav-link" href="pages/ninos.html">Niños</a>
                     </li>
                     <!-- Botón del usuario 1 -->
                     <li class="nav-item d-lg-none">
-                        <a class="nav-link" href="registroUsuario.html">
+                        <a class="nav-link" href="pages/registroUsuario.html">
                             <i class="fas fa-user"></i> Usuario
                         </a>
                     </li>
@@ -66,7 +66,7 @@
                             <a class="dropdown-item" href="#">Item 2</a>
                             <a class="dropdown-item" href="#">Item 3</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="carro.html"><small>Carro</small></a>
+                            <a class="dropdown-item" href="pages/carro.html"><small>Carro</small></a>
                         </div>
                     </li>
                 </ul>
@@ -77,7 +77,7 @@
                 </form>
                 <!-- Botón de Usuario -->
                 <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-info" href="registroUsuario.html">
+                    <a class="btn btn-info" href="pages/registroUsuario.html">
                         <i class="fas fa-user"></i>
                     </a>
                 </div>
@@ -150,21 +150,9 @@
                 <div class="row">
                     <div class="col-sm">
                         <div class="card bg-dark text-white catalogo" >
-                            <img src="img/hombre.jpg" class="card-img" alt="">
-                            <div class="card-img-overlay">
-                                <a href="hombre.html" class="linkCatalogo stretched-link">
-                                    <h1 class="card-text ">
-                                        Hombre
-                                    </h1>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card bg-dark text-white catalogo" >
                             <img src="img/mujer.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <a href="mujeres.html" class="linkCatalogo stretched-link">
+                                <a href="pages/mujeres.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text">
                                         Mujer
                                     </h1>
@@ -174,9 +162,22 @@
                     </div>
                     <div class="col-sm">
                         <div class="card bg-dark text-white catalogo" >
+                            <img src="img/hombre.jpg" class="card-img" alt="">
+                            <div class="card-img-overlay">
+                                <a href="pages/hombre.html" class="linkCatalogo stretched-link">
+                                    <h1 class="card-text ">
+                                        Hombre
+                                    </h1>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-sm">
+                        <div class="card bg-dark text-white catalogo" >
                             <img src="img/ninos.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <a href="ninos.html" class="linkCatalogo stretched-link">
+                                <a href="pages/ninos.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text ">
                                         Niños
                                     </h1>
