--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -32,20 +32,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
+                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(actual)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item " >
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="hombre.html">Hombres</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="ninos.html">Niños</a>
                     </li>
                     <!-- Botón del usuario 1 -->
@@ -101,7 +101,7 @@
         <section class="pt-5 pb-5">
             <!-- PlaceHolder Productos -->
             <div class="container">
-                <h2 class="display-4 my-4">Hombre</h2>
+                <h2 class="display-4 my-4">Niños</h2>
                 <div class="row d-flex equal">
                     <div class="  col-md-4 mb-4">
                         <div class="card h-100 border-0">
@@ -194,6 +194,7 @@
             
         </section>
     </main>
+
 
     <!-- Aquí va el footer -->
     <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
