--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -36,21 +36,21 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Marca de la página -->
-      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
       <!-- Los items del Navbar -->
       <div class="collapse navbar-collapse" id="navbarTogglerMain">
         <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
+            <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(actual)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="mujeres.html">Mujeres</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Hombres</a>
+            <a class="nav-link" href="hombre.html">Hombres</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Niños</a>
+            <a class="nav-link" href="ninos.html">Niños</a>
           </li>
           <!-- Botón del usuario 1 -->
           <li class="nav-item d-lg-none">
