--- a/pages/carro.html
+++ b/pages/carro.html
@@ -32,12 +32,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
+                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(actual)</span></a>
                     </li>
                     <li class="nav-item " >
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
