--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    
+
 <!--Metadatos-->
 
 <head>
@@ -32,22 +32,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
+                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(actual)</span></a>
                     </li>
-                    <li class="nav-item " >
+                    <li class="nav-item active">
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="hombre.html">Hombres</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="ninos.html">Niños</a>
                     </li>
+
                     <!-- Botón del usuario 1 -->
                     <li class="nav-item d-lg-none">
                         <a class="nav-link" href="registroUsuario.html">
@@ -65,7 +66,7 @@
                             <a class="dropdown-item" href="#">Item 2</a>
                             <a class="dropdown-item" href="#">Item 3</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Ver carro</a>
+                            <a class="dropdown-item" href="carro.html"><small>Carro</small></a>
                         </div>
                     </li>
                 </ul>
@@ -91,17 +92,19 @@
                         <a class="dropdown-item" href="#">Item 2</a>
                         <a class="dropdown-item" href="#">Item 3</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="carro.html"><small>Carro</small></a>
+                        <a class="dropdown-item" href="#">Ver carro</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
+        <!-- Main -->
+
         <section class="pt-5 pb-5">
             <!-- PlaceHolder Productos -->
             <div class="container">
-                <h2 class="display-4 my-4">Niños</h2>
+                <h2 class="display-4 my-4">Mujeres</h2>
                 <div class="row d-flex equal">
                     <div class="  col-md-4 mb-4">
                         <div class="card h-100 border-0">
@@ -193,6 +196,7 @@
             </div>
             
         </section>
+
     </main>
 
 
@@ -222,7 +226,7 @@
                     </ul>
                 </div>
             </div>
-            <hr class="footer-hr my-2 py-0"/>
+            <hr class="footer-hr my-2 py-0" />
             <div class="row">
                 <div class="col-4 text-left">
                     <i class="fab fa-twitter mx-1 text-info"></i>
@@ -242,4 +246,5 @@
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
