--- a/pages/carro.html
+++ b/pages/carro.html
@@ -210,7 +210,7 @@
                       <a href="#" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Comprar</a>
                   </div>
                   <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
-                      <a href="index.html">
+                      <a href="../index.html">
                           <i class="fas fa-arrow-left mr-2"></i> Continuar Comprando</a>
                   </div>
               </div>
