--- a/pages/producto.html
+++ b/pages/producto.html
@@ -162,7 +162,7 @@
                                 
                             </div>
                         </div>
-                        <button type="button" class="btn btn-dark my-2">Comprar</button>
+                        <a href="carro.html" role="button" class="btn btn-dark my-2 "> Comprar</a>
                         <div class="container">
                             <div id="accordion">
                                 <div class="card">
