Titulos en las paginas de Hombres y Ninos

--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -101,6 +101,7 @@
         <section class="pt-5 pb-5">
             <!-- PlaceHolder Productos -->
             <div class="container">
+                <h2 class="display-4 my-4">Hombres</h2>
                 <div class="row d-flex equal">
                     <div class=" col-sm-6 col-md-3 col-xl-4 mb-4">
                         <div class="card h-100 border-0">
