quitado el fondo de imagen

--- a/carro.html
+++ b/carro.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Registrar Usuario - ChangeWear</title>
+    <title>Comprar | ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)">
     <link rel="icon" href="img/cwIcon.png" type="image/png">
     <!-- FontAwesome -->
@@ -32,20 +32,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(actual)</span></a>
+                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
                     </li>
                     <li class="nav-item " >
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="hombre.html">Hombres</a>
+                        <a class="nav-link" href="hombres.html">Hombres</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="ninos.html">Niños</a>
                     </li>
                     <!-- Botón del usuario 1 -->
@@ -210,7 +210,7 @@
                       <a href="#" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Comprar</a>
                   </div>
                   <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
-                      <a href="../index.html">
+                      <a href="index.html">
                           <i class="fas fa-arrow-left mr-2"></i> Continuar Comprando</a>
                   </div>
               </div>
