correccion de referencias en las paginas - DEL menu carrito

--- a/index.html
+++ b/index.html
@@ -33,21 +33,18 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear<span class="sr-only">(actual)</span></a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mujeres.html">Mujeres</a>
+                        <a class="nav-link" href="pages/hombres.html">Hombres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="hombres.html">Hombres</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ninos.html">Niños</a>
+                        <a class="nav-link" href="pages/ninos.html">Niños</a>
                     </li>
                 </ul>
                 <!--Barra de busqueda -->
@@ -58,23 +55,15 @@
                 </form>
                 <!-- Botón de Usuario -->
                 <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-info" href="registroUsuario.html">
+                    <a class="btn btn-info" href="pages/registroUsuario.html">
                         <i class="fas fa-user"></i>
                     </a>
                 </div>
                 <!-- Botón del carro de compras 2-->
                 <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                    <a class="btn btn-danger" href="pages/carro.html">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Item 1</a>
-                        <a class="dropdown-item" href="#">Item 2</a>
-                        <a class="dropdown-item" href="#">Item 3</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="carro.html">Ver carro</a>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -133,7 +122,7 @@
                         <div class="card bg-dark text-white catalogo" >
                             <img src="img/hombre.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <a href="hombres.html" class="linkCatalogo stretched-link">
+                                <a href="pages/hombres.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text ">
                                         Hombre
                                     </h1>
@@ -145,7 +134,7 @@
                         <div class="card bg-dark text-white catalogo" >
                             <img src="img/mujer.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <a href="mujeres.html" class="linkCatalogo stretched-link">
+                                <a href="pages/mujeres.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text">
                                         Mujer
                                     </h1>
@@ -157,7 +146,7 @@
                         <div class="card bg-dark text-white catalogo" >
                             <img src="img/ninos.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <a href="ninos.html" class="linkCatalogo stretched-link">
+                                <a href="pages/ninos.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text ">
                                         Niños
                                     </h1>
@@ -203,7 +192,7 @@
                                                     <p class="card-text">Parte de nuestra nueva colección Red</p>
                                                 </div>
                                                 <div class="card-footer">
-                                                    <a href="producto.html">
+                                                    <a href="pages/producto.html">
                                                         <div class="d-flex justify-content-between">
                                                             <small>Añadir</small>
                                                             <i class="fas fa-plus-square"></i>
@@ -223,7 +212,7 @@
                                                     
                                                 </div>
                                                 <div class="card-footer">
-                                                    <a href="producto.html">
+                                                    <a href="pages/producto.html">
                                                         <div class="d-flex justify-content-between">
                                                             <small>Añadir</small>
                                                             <i class="fas fa-plus-square"></i>
@@ -242,7 +231,7 @@
 
                                                 </div>
                                                 <div class="card-footer">
-                                                    <a href="producto.html">
+                                                    <a href="pages/producto.html">
                                                         <div class="d-flex justify-content-between">
                                                             <small>Añadir</small>
                                                             <i class="fas fa-plus-square"></i>
@@ -267,7 +256,7 @@
 
                                                 </div>
                                                 <div class="card-footer">
-                                                    <a href="producto.html">
+                                                    <a href="pages/producto.html">
                                                         <div class="d-flex justify-content-between">
                                                             <small>Añadir</small>
                                                             <i class="fas fa-plus-square"></i>
@@ -287,7 +276,7 @@
 
                                                 </div>
                                                 <div class="card-footer">
-                                                    <a href="producto.html">
+                                                    <a href="pages/producto.html">
                                                         <div class="d-flex justify-content-between">
                                                             <small>Añadir</small>
                                                             <i class="fas fa-plus-square"></i>
@@ -306,7 +295,7 @@
 
                                                 </div>
                                                 <div class="card-footer">
-                                                    <a href="producto.html">
+                                                    <a href="pages/producto.html">
                                                         <div class="d-flex justify-content-between">
                                                             <small>Añadir</small>
                                                             <i class="fas fa-plus-square"></i>
