--- a/pages/hombres.html
+++ b/pages/hombres.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="es">
+    
 <!--Metadatos-->
 
 <head>
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Fuerza a IE 8/9/10 a usar su último motor de renderizado -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mujeres | ChangeWear</title>
+    <title>Hombres | ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)">
-    <link rel="icon" href="img/cwIcon.png" type="image/png">
+    <link rel="icon" href="../img/cwIcon.png" type="image/png">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Bootstrap -->
@@ -32,22 +32,19 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-                    <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="mujeres.html">Mujeres<span class="sr-only">(actual)</span></a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="hombres.html">Hombres</a>
+                        <a class="nav-link" href="hombres.html">Hombres<span class="sr-only">(actual)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ninos.html">Niños</a>
-                    </li>
+                    </li>                                        
                 </ul>
                 <!--Barra de busqueda -->
                 <form class="form-inline my-0 mr-0 nav-item">
@@ -63,33 +60,23 @@
                 </div>
                 <!-- Botón del carro de compras 2-->
                 <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                    <a class="btn btn-danger" href="carro.html">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Item 1</a>
-                        <a class="dropdown-item" href="#">Item 2</a>
-                        <a class="dropdown-item" href="#">Item 3</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="carro.html">Ver carro</a>
-                    </div>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <!-- Main -->
-
         <section class="pt-5 pb-5">
             <!-- PlaceHolder Productos -->
             <div class="container">
-                <h2 class="display-4 my-4">Mujeres</h2>
+                <h2 class="display-4 my-4">Hombre</h2>
                 <div class="row d-flex equal">
                     <div class="  col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_mujeres/ADI-GN6702-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_hombres/ADI-GN3502-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -105,7 +92,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_mujeres/CZ8530-010-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_hombres/CV2249-010-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -121,7 +108,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_mujeres/CZ8632-010-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_hombres/NBAHD520306-BLK-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -139,7 +126,7 @@
                     <div class="  col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_mujeres/CV8481-100-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_hombres/371149-23-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -155,7 +142,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_mujeres/DD1869-101-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_hombres/DD1171-001-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -171,7 +158,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_mujeres/SX5277-010-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_hombres/SX7677-010-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -215,7 +202,7 @@
                     </ul>
                 </div>
             </div>
-            <hr class="footer-hr my-2 py-0" />
+            <hr class="footer-hr my-2 py-0"/>
             <div class="row">
                 <div class="col-4 text-left">
                     <i class="fab fa-twitter mx-1 text-info"></i>
