--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
     
 <!--Metadatos-->
 
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Niños | ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)">
-    <link rel="icon" href="img/cwIcon.png" type="image/png">
+    <link rel="icon" href="../img/cwIcon.png" type="image/png">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Bootstrap -->
@@ -32,13 +32,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-                    <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
                     <li class="nav-item " >
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
@@ -63,17 +60,9 @@
                 </div>
                 <!-- Botón del carro de compras 2-->
                 <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                    <a class="btn btn-danger" href="carro.html">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Item 1</a>
-                        <a class="dropdown-item" href="#">Item 2</a>
-                        <a class="dropdown-item" href="#">Item 3</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="carro.html"><small>Carro</small></a>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -87,7 +76,7 @@
                     <div class="  col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/86H640-023-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_kids/86H640-023-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -103,7 +92,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/86H640-C87-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_kids/86H640-C87-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -119,7 +108,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/45A407-A0R-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_kids/45A407-A0R-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -137,7 +126,7 @@
                     <div class="  col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/9A0128-023-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_kids/9A0128-023-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -153,7 +142,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/ADI-FX4902-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_kids/ADI-FX4902-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
@@ -169,7 +158,7 @@
                     <div class=" col-md-4 mb-4">
                         <div class="card h-100 border-0">
                             <a href="producto.html" class="text-decoration-none stretched-link">
-                                <img class="card-img-top" src="img/seccion_kids/CD6864-005-1_1024.png" alt="">
+                                <img class="card-img-top" src="../img/seccion_kids/CD6864-005-1_1024.png" alt="">
                                 <div class="card-body text-center">
                                     <h4 class="card-title">
                                         <a href="#" class=" font-weight-bold text-dark text-uppercase small">Producto</a>
