--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -10,7 +10,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Registrar Usuario | ChangeWear</title>
   <meta name="description" content="Sitio de venta online (Beta)">
-  <link rel="icon" href="img/cwIcon.png" type="image/png">
+  <link rel="icon" href="../img/cwIcon.png" type="image/png">
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <!-- Bootstrap -->
@@ -21,7 +21,6 @@
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/main.js"></script>
 </head>
-
 
 <!--Inicio de la página-->
 
@@ -36,13 +35,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Marca de la página -->
-      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
       <!-- Los items del Navbar -->
       <div class="collapse navbar-collapse" id="navbarTogglerMain">
         <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="mujeres.html">Mujeres</a>
           </li>
@@ -66,16 +62,9 @@
         </div>
         <!-- Botón del carro de compras 2-->
         <div class="btn-group dropdown ml-2 d-none d-lg-block">
-          <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="btn btn-danger" href="carro.html">
             <i class="fas fa-shopping-cart"></i>
           </a>
-          <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="#">Item 1</a>
-            <a class="dropdown-item" href="#">Item 2</a>
-            <a class="dropdown-item" href="#">Item 3</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="carro.html">Ver carro</a>
-          </div>
         </div>
       </div>
     </nav>
@@ -167,7 +156,6 @@
         </div>
       </div>
     </div>
-
   </div>
   <br>
   <br>
@@ -218,5 +206,4 @@
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
