Arreglo repeticion pagina

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="pages/mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/hombres.html">Hombres</a>
+                        <a class="nav-link" href="pages/hombre.html">Hombres</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pages/ninos.html">Niños</a>
@@ -119,9 +119,9 @@
                 <div class="row">
                     <div class="col-sm">
                         <div class="card bg-dark text-white catalogo" >
-                            <img src="img/mujer.jpg" class="card-img" alt="">
+                            <img src="img/hombre.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
-                                <a href="pages/hombres.html" class="linkCatalogo stretched-link">
+                                <a href="pages/hombre.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text ">
                                         Hombre
                                     </h1>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card bg-dark text-white catalogo" >
-                            <img src="img/hombre.jpg" class="card-img" alt="">
+                            <img src="img/mujer.jpg" class="card-img" alt="">
                             <div class="card-img-overlay">
                                 <a href="pages/mujeres.html" class="linkCatalogo stretched-link">
                                     <h1 class="card-text">
