--- a/pages/carro.html
+++ b/pages/carro.html
@@ -47,7 +47,7 @@
                     </li>
                     <!-- Botón del usuario 1 -->
                     <li class="nav-item d-lg-none">
-                        <a class="nav-link" href="registroUsuario.html">
+                        <a class="nav-link" href="login.html">
                             <i class="fas fa-user"></i> Usuario
                         </a>
                     </li>
