rename "hombres.html" a "hombre.html" y sus referencias

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="pages/mujeres.html">Mujeres</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/hombres.html">Hombres</a>
+              <a class="nav-link" href="pages/hombre.html">Hombres</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pages/ninos.html">Niños</a>
@@ -163,7 +163,7 @@
                 <img src="img/hombre.jpg" class="card-img" alt="" />
                 <div class="card-img-overlay">
                   <a
-                    href="pages/hombres.html"
+                    href="pages/hombre.html"
                     class="linkCatalogo stretched-link"
                   >
                     <h1 class="card-text">Hombre</h1>
