--- a/pages/carro.html
+++ b/pages/carro.html
@@ -22,7 +22,6 @@
     <script src="js/main.js"></script>
 </head>
 
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
@@ -40,7 +39,7 @@
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="hombres.html">Hombres</a>
+                        <a class="nav-link" href="hombre.html">Hombres</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ninos.html">Niños</a>
