--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="mujeres.html">Mujeres</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="hombres.html"
+              <a class="nav-link" href="hombre.html"
                 >Hombres<span class="sr-only">(actual)</span></a
               >
             </li>
