--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -61,7 +61,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="hombres.html">Hombres</a>
+              <a class="nav-link" href="hombre.html">Hombres</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="ninos.html">Niños</a>
