--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="mujeres.html">Mujeres</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="hombres.html">Hombres</a>
+              <a class="nav-link" href="hombre.html">Hombres</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="ninos.html"
