--- a/pages/registroUsuario.html
+++ b/pages/registroUsuario.html
@@ -35,19 +35,19 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Marca de la página -->
-      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear<span
+      <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear<span
           class="sr-only">(actual)</span></a>
       <!-- Los items del Navbar -->
       <div class="collapse navbar-collapse" id="navbarTogglerMain">
         <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="pages/mujeres.html">Mujeres</a>
+            <a class="nav-link" href="mujeres.html">Mujeres</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/hombre.html">Hombres</a>
+            <a class="nav-link" href="hombre.html">Hombres</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/ninos.html">Niños</a>
+            <a class="nav-link" href="ninos.html">Niños</a>
           </li>
 
         </ul>
@@ -57,13 +57,13 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
         <ul class="navbar-nav mt-1 mt-lg-0">
-          <li class="nav-item my-2">
-            <a class="btn btn-danger" href="pages/carro.html">
+          <li class="nav-item my-2 ml-lg-2">
+            <a class="btn btn-danger" href="carro.html">
               <i class="fas fa-shopping-cart"></i>
             </a>
           </li>
-          <li class="nav-item my-2">
-            <a class="btn btn-info" href="pages/registroUsuario.html">
+          <li class="nav-item my-2 ml-lg-2">
+            <a class="btn btn-info" href="registroUsuario.html">
               <i class="fas fa-user"></i>
             </a>
           </li>
